--- a/Zeus/Base.lproj/AddActivityVC.storyboard
+++ b/Zeus/Base.lproj/AddActivityVC.storyboard
@@ -8,7 +8,7 @@
         <!--新建活动-->
         <scene sceneID="t4M-tO-Epy">
             <objects>
-                <viewController title="新建活动" hidesBottomBarWhenPushed="YES" id="duP-ir-yKn" customClass="AddActivityVC" customModule="Zeus" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UIViewController-duP-ir-yKn" title="新建活动" hidesBottomBarWhenPushed="YES" id="duP-ir-yKn" customClass="AddActivityVC" customModule="Zeus" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I04-rP-egD"/>
                         <viewControllerLayoutGuide type="bottom" id="3SY-Wd-ZhO"/>
@@ -16,26 +16,25 @@
                     <view key="view" contentMode="scaleToFill" id="lyF-A7-Z0n">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cae-hf-eJm">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Cae-hf-eJm" secondAttribute="trailing" id="apd-yZ-mjC"/>
-                            <constraint firstItem="3SY-Wd-ZhO" firstAttribute="top" secondItem="Cae-hf-eJm" secondAttribute="bottom" id="dcT-GI-Zor"/>
-                            <constraint firstItem="Cae-hf-eJm" firstAttribute="top" secondItem="lyF-A7-Z0n" secondAttribute="top" id="fcx-4P-aLJ"/>
-                            <constraint firstItem="Cae-hf-eJm" firstAttribute="leading" secondItem="lyF-A7-Z0n" secondAttribute="leading" id="xUd-uA-eQd"/>
-                        </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <segue destination="b5p-8o-cBI" kind="show" identifier="showClientTypeVC" id="3M7-AC-2x2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNC-Z5-7Y2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-750.5" y="842.5"/>
+            <point key="canvasLocation" x="-1207.5" y="592.5"/>
+        </scene>
+        <!--ClientTypeVC-->
+        <scene sceneID="5dQ-dc-9zJ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ClientTypeVC" id="b5p-8o-cBI" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kR6-8J-a6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-715.5" y="592.5"/>
         </scene>
     </scenes>
 </document>
